# cornucopia

./: Cargo.toml
benches/: codegen.rs
crates/client_async/: Cargo.toml
crates/client_core/: Cargo.toml
crates/client_sync/: Cargo.toml
crates/cornucopia/: Cargo.toml
crates/cornucopia/src/: cli.rs  config.rs  lib.rs  prepare_queries.rs  type_registrar.rs  utils.rs
examples/auto_build/: Cargo.toml
test_integration/src/: fixtures.rs
