[package]
name = "cornucopia_async"
version = "0.6.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Asynchronous client library for Cornucopia users."
homepage = "https://cornucopia-rs.netlify.app/"
repository = "https://github.com/cornucopia-rs/cornucopia"
readme = "README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]

[features]
default = ["deadpool", "tokio-postgres/default"]
js = ["cornucopia_client_core/js", "tokio-postgres/js"]
deadpool = ["dep:deadpool-postgres"]
with-serde_json-1 = ["cornucopia_client_core/with-serde_json-1"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Path dependencies
cornucopia_client_core = { path = "../client_core", version = "0.4.0" }

# async
async-trait = "0.1.63"

# rust-postgres interaction
tokio-postgres = { git = "https://github.com/sfackler/rust-postgres.git", rev = "a1bdd0bf15325cdc05fcfe3c0671953b2a8c7981", default-features = false }

# connection pooling
deadpool-postgres = { version = "0.14.0", optional = true }
