[package]
name = "cornucopia_client_core"
version = "0.4.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Private abstractions for Cornucopia clients."
homepage = "https://cornucopia-rs.netlify.app/"
repository = "https://github.com/cornucopia-rs/cornucopia"
readme = "README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
js = ["postgres-protocol/js", "postgres-types/js"]
with-serde_json-1 = ["postgres-types/with-serde_json-1", "serde", "serde_json"]

[dependencies]
# Postgres interaction
postgres-protocol = { git = "https://github.com/duarten/rust-postgres.git", branch = "postgres-types-js" }
postgres-types = { git = "https://github.com/duarten/rust-postgres.git", branch = "postgres-types-js" }
## Iterator utils required for working with `postgres_protocol::types::ArrayValues`
fallible-iterator = "0.2.0"

# json
## This crate implements the "ergonomic paramters" for
## `serde_json::Value` and `serde_json::raw::RawValue`.
serde_json = { version = "1.0.91", optional = true }
## Used for `postgres_types::Json` `Serialize` trait bounds
serde = { version = "1.0.152", optional = true }
